# pi_agent_rust

./: .gitignore  Cargo.toml
.agents/code/: AGENTS.md
.agents/code/issues/: 1773707342-88552-0.md  1773708709-9095-0.md  1773708709-9096-0.md  1773709847-19887-0.md  1773709857-19893-0.md
crates/pi_lynx_sdk/: Cargo.toml
crates/pi_lynx_sdk/src/: bootstrap.rs  errors.rs  event_bridge.rs  history.rs  lib.rs  provider_factory.rs  runtime.rs  tool_bridge.rs  types.rs
crates/pi_lynx_sdk/tests/: history.rs  provider_factory.rs  runtime_turn.rs  tool_bridge.rs
docs/: legacy-models.generated.ts
src/: agent.rs  app.rs  auth.rs  autocomplete.rs  compaction.rs  compaction_worker.rs  doctor.rs  extension_dispatcher.rs  extension_preflight.rs  extensions.rs  extensions_js.rs  http_shim.rs  interactive.rs  main.rs  migrations.rs  models.rs  pi_wasm.rs  resources.rs  rpc.rs  scheduler.rs  sdk.rs  session.rs  session_index.rs  session_picker.rs  sse.rs  tools.rs  vcr.rs
src/http/: client.rs
src/interactive/: agent.rs  commands.rs  keybindings.rs  tests.rs  view.rs
src/providers/: anthropic.rs  azure.rs  cohere.rs  gemini.rs  mod.rs  openai.rs  openai_responses.rs
tests/: e2e_cli.rs  e2e_rpc.rs  json_mode_parity.rs  sdk_integration.rs  tui_state.rs
tests/full_suite_gate/: artifact_retention_report.json  certification_events.jsonl  certification_report.md  certification_verdict.json  full_suite_events.jsonl  full_suite_report.md  full_suite_verdict.json  perf3x_bead_coverage_audit.json  practical_finish_checkpoint.json  preflight_verdict.json  waiver_audit.json
(+7 files in other folders)
